# uchariot-vision

./: .clang-format  .gitignore  CMakeLists.txt  README.md  deploy.sh  piToolchain.cmake  rsConfig.json  send.bat  send.sh  start.sh  toolchain.cmake
crossbuild/: uChariotVision
include/: Camera.h  CameraBase.h  DetectModel.h  Detection.h  Detector.h  Display.h  MessageQueue.h  NetworkConnection.h  Pipe.h  Point.h  Pose.h  Realsense.h  RotationEstimator.h  SimCamera.h  Tensorflow.h  Utils.h
include/rapidjson/: reader.h
include_/: Detector.h  Display.h  Locator.h  Stream.h
models/: rocks-labels.txt
python/: depth-view.py  model.py  model_depth.py  opencv-viewer.py
src/: Camera.cpp  DetectModel.cpp  Detection.cpp  Detector.cpp  Display.cpp  MessageQueue.cpp  NetworkConnection.cpp  Pipe.cpp  Pose.cpp  Realsense.cpp  RotationEstimator.cpp  SimCamera.cpp  Tensorflow.cpp  Utils.cpp  main.cpp
src_/: Detector.cpp  Locator.cpp  Stream.cpp
